Primer uso de JasperReport

--- a/Facturador/.settings/org.eclipse.core.resources.prefs
+++ b/Facturador/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
-encoding/ClientesBase.jrxml=UTF-8
+encoding/ReporteCienteBse.jrxml=UTF-8
+encoding/prueba.jrxml=UTF-8
