--- a/Facturador/.classpath
+++ b/Facturador/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="C:/Users/maria_000/Downloads/sqlite-jdbc-3.8.11.1.jar"/>
 	<classpathentry kind="con" path="net.sf.jasperreports.JR_CONTAINER"/>
 	<classpathentry kind="con" path="net.sf.jasperreports.JR_DEPENDENCIES_CONTAINER"/>
+	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
